[gd_scene load_steps=11 format=3 uid="uid://cq7yp1gufbefx"]

[ext_resource type="Script" path="res://Code/scripts/buttons/button_toggle.gd" id="1_o211k"]
[ext_resource type="ArrayMesh" uid="uid://c3isicl5i1yfa" path="res://Assets/3D/Beach/button 1 скин 1.obj" id="3_wbawa"]
[ext_resource type="FontFile" uid="uid://bbfcth2cdl4l1" path="res://Assets/OpenSans_Condensed-Bold.ttf" id="4_1nolu"]
[ext_resource type="AudioStream" path="res://Assets/Sounds/ButtonOff.mp3" id="4_y2itt"]
[ext_resource type="AudioStream" path="res://Assets/Sounds/ButtonOn.mp3" id="5_gmpi8"]
[ext_resource type="Script" path="res://Code/scripts/MovingPlatform.gd" id="5_vbefy"]
[ext_resource type="Texture2D" uid="uid://dpeskkh334272" path="res://Assets/3D/Beach/button 1 скин 1.png" id="6_qxwkk"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_a1mre"]
radius = 1.9883

[sub_resource type="Curve" id="Curve_tcqub"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0]
point_count = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_re7ai"]
albedo_texture = ExtResource("6_qxwkk")

[node name="pressurePlate" type="Area3D" node_paths=PackedStringArray("text_timer")]
script = ExtResource("1_o211k")
text_timer = NodePath("Text")

[node name="collider" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
shape = SubResource("CylinderShape3D_a1mre")

[node name="Text" type="Label3D" parent="."]
transform = Transform3D(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0.5, 0)
billboard = 1
text = "
"
font = ExtResource("4_1nolu")
font_size = 512
outline_size = 127

[node name="ButtonOffSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_y2itt")
volume_db = -20.0
bus = &"Sound"

[node name="ButtonOnSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_gmpi8")
volume_db = -20.0
bus = &"Sound"

[node name="MovingPlatform" type="AnimatableBody3D" parent="."]
script = ExtResource("5_vbefy")
speed_curve = SubResource("Curve_tcqub")
use_relative_transformation = true
positions_count = 2
previous_position = 1
positions = Array[Transform3D]([Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.3, 0), Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)])
movement_times = Array[float]([0.08, 0.08])

[node name="mesh" type="MeshInstance3D" parent="MovingPlatform"]
material_override = SubResource("StandardMaterial3D_re7ai")
mesh = ExtResource("3_wbawa")
skeleton = NodePath("../..")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
